src/snapshots/hugr_qir__lower_ssa_vars__test__lowered@float_select_with_downstream_call.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:float_select_with_downstream_call>'
source_filename = "float_select_with_downstream_call"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.dup.1, label %entry.dup.0

join:                                             ; preds = %entry.dup.1, %entry.dup.0
  ret void

entry.dup.0:                                      ; preds = %entry
  call void @consume(double 2.000000e+00)
  br label %join

entry.dup.1:                                      ; preds = %entry
  call void @consume(double 1.000000e+00)
  br label %join
}

declare void @consume(double)
