src/snapshots/hugr_qir__lower_ssa_vars__test__lowered@generates_qubit_selects_1_example.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:generates-qubit-selects-1-example>'
source_filename = "hugr-qir"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [3 x i8] c"c0\00", align 1
@1 = private unnamed_addr constant [3 x i8] c"c1\00", align 1
@2 = private unnamed_addr constant [3 x i8] c"q0\00", align 1
@3 = private unnamed_addr constant [3 x i8] c"q1\00", align 1
@4 = private unnamed_addr constant [3 x i8] c"q2\00", align 1
@5 = private unnamed_addr constant [3 x i8] c"q3\00", align 1

define dso_local void @__hugr__.main.1() local_unnamed_addr #0 {
alloca_block:
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 4 to ptr), ptr null)
  %0 = tail call i1 @__quantum__qis__read_result__body(ptr null)
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 5 to ptr), ptr nonnull inttoptr (i64 1 to ptr))
  %1 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 1 to ptr))
  br i1 %0, label %alloca_block.route2, label %alloca_block.route1

__prepare_module_record_output_final:             ; preds = %alloca_block.dup.3, %alloca_block.dup.2, %alloca_block.dup.1, %alloca_block.dup.0
  %val.merge = phi i1 [ %2, %alloca_block.dup.0 ], [ %6, %alloca_block.dup.1 ], [ %10, %alloca_block.dup.2 ], [ %14, %alloca_block.dup.3 ]
  %val.merge3 = phi i1 [ %3, %alloca_block.dup.0 ], [ %7, %alloca_block.dup.1 ], [ %11, %alloca_block.dup.2 ], [ %15, %alloca_block.dup.3 ]
  %val.merge4 = phi i1 [ %4, %alloca_block.dup.0 ], [ %8, %alloca_block.dup.1 ], [ %12, %alloca_block.dup.2 ], [ %16, %alloca_block.dup.3 ]
  %val.merge5 = phi i1 [ %5, %alloca_block.dup.0 ], [ %9, %alloca_block.dup.1 ], [ %13, %alloca_block.dup.2 ], [ %17, %alloca_block.dup.3 ]
  call void @__quantum__rt__bool_record_output(i1 %0, ptr @0)
  call void @__quantum__rt__bool_record_output(i1 %1, ptr @1)
  call void @__quantum__rt__bool_record_output(i1 %val.merge, ptr @2)
  call void @__quantum__rt__bool_record_output(i1 %val.merge3, ptr @3)
  call void @__quantum__rt__bool_record_output(i1 %val.merge4, ptr @4)
  call void @__quantum__rt__bool_record_output(i1 %val.merge5, ptr @5)
  ret void

alloca_block.dup.0:                               ; preds = %alloca_block.route1
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  %2 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  %3 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  %4 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  %5 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %__prepare_module_record_output_final

alloca_block.dup.1:                               ; preds = %alloca_block.route1
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  %6 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  %7 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  %8 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  %9 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %__prepare_module_record_output_final

alloca_block.dup.2:                               ; preds = %alloca_block.route2
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 1 to ptr))
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  %10 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  %11 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  %12 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  %13 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %__prepare_module_record_output_final

alloca_block.dup.3:                               ; preds = %alloca_block.route2
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr null)
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  %14 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  %15 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  %16 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  %17 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %__prepare_module_record_output_final

alloca_block.route1:                              ; preds = %alloca_block
  br i1 %1, label %alloca_block.dup.1, label %alloca_block.dup.0

alloca_block.route2:                              ; preds = %alloca_block
  br i1 %1, label %alloca_block.dup.3, label %alloca_block.dup.2
}

declare void @__quantum__qis__mz__body(ptr, ptr) local_unnamed_addr

declare i1 @__quantum__qis__read_result__body(ptr) local_unnamed_addr

declare void @__quantum__qis__phasedx__body(double, double, ptr) local_unnamed_addr

declare void @__quantum__rt__bool_record_output(i1, ptr) local_unnamed_addr

attributes #0 = { "entry_point" "output_labeling_schema" "qir_profiles"="custom" "required_num_qubits"="6" "required_num_results"="6" }

!llvm.module.flags = !{!0, !1, !2, !3}

!0 = !{i32 1, !"qir_major_version", i32 1}
!1 = !{i32 7, !"qir_minor_version", i32 0}
!2 = !{i32 1, !"dynamic_qubit_management", i1 false}
!3 = !{i32 1, !"dynamic_result_management", i1 false}
