src/snapshots/hugr_qir__lower_ssa_vars__test__lowered@simple_float_select.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:simple_float_select>'
source_filename = "simple_float_select"
target datalayout = "<normalized>"
target triple = "<normalized>"

define double @__hugr__.main.1(i1 %cond0) {
entry:
  br i1 %cond0, label %entry.leaf.1, label %entry.leaf.0

entry.leaf.0:                                     ; preds = %entry
  ret double 5.000000e+00

entry.leaf.1:                                     ; preds = %entry
  ret double 4.000000e+00
}
