src/snapshots/hugr_qir__lower_ssa_vars__test__lowered@simple_qubit_select.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:simple_qubit_select>'
source_filename = "simple_qubit_select"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond) {
entry:
  br i1 %cond, label %entry.dup.1, label %entry.dup.0

common.ret:                                       ; preds = %entry.dup.1, %entry.dup.0
  ret void

entry.dup.0:                                      ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br label %common.ret

entry.dup.1:                                      ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret
}

declare void @__quantum__qis__reset__body(ptr)
